Barometer: select INTERNAL or NONE (also while recording).
Part of #1424.