@@ -7,9 +7,7 @@ import android.util.AttributeSet;
 
 import androidx.preference.PreferenceDialogFragmentCompat;
 
-import java.util.List;
-
-import de.dennisguse.opentracks.sensors.BluetoothHandlerBarometricPressure;
+import java.util.Collections;
 
 public class BluetoothLePressurePreference extends BluetoothLeSensorPreference {
 
@@ -36,6 +34,7 @@ public class BluetoothLePressurePreference extends BluetoothLeSensorPreference {
         boolean hasInternalSensor = pressureSensor != null;
 
         return BluetoothLeSensorPreference.BluetoothLeSensorPreferenceDialog
-                .newInstance(getKey(), List.of(BluetoothHandlerBarometricPressure.BAROMETRIC_PRESSURE), hasInternalSensor);
+//                .newInstance(getKey(), List.of(BluetoothHandlerBarometricPressure.BAROMETRIC_PRESSURE), hasInternalSensor); //TODO #1424
+                .newInstance(getKey(), Collections.emptyList(), hasInternalSensor);
     }
 }
